--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -1452,9 +1452,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueGradient" translatesAutoresizingMaskIntoConstraints="NO" id="gwy-bI-TZd">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="313"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="287"/>
+                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="313" id="9cL-s4-EmU"/>
+                                                <constraint firstAttribute="height" constant="287" id="e3v-ng-dC5"/>
                                             </constraints>
                                         </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pix-av-Cx4">
@@ -1465,57 +1466,53 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bC9-UX-zST">
-                                            <rect key="frame" x="16" y="162" width="343" height="20.5"/>
+                                            <rect key="frame" x="16" y="162" width="343" height="21"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o6L-wR-HZT">
-                                            <rect key="frame" x="16" y="187.5" width="343" height="20"/>
+                                            <rect key="frame" x="16" y="188" width="343" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interests" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-Kr-3Nk">
-                                            <rect key="frame" x="150" y="321" width="75" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMJ-f8-k6j">
-                                            <rect key="frame" x="16" y="215.5" width="343" height="20.5"/>
+                                            <rect key="frame" x="16" y="216" width="343" height="20.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interests" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-Kr-3Nk">
+                                            <rect key="frame" x="150" y="307" width="75" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailingMargin" secondItem="yMJ-f8-k6j" secondAttribute="trailing" constant="8" id="1fS-cu-mRX"/>
-                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="top" secondItem="LbL-sJ-0qo" secondAttribute="top" id="32G-nR-5lT"/>
+                                        <constraint firstAttribute="trailing" secondItem="MTp-Kr-3Nk" secondAttribute="trailing" constant="150" id="4TS-Z8-RUi"/>
                                         <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="5gI-2q-7HO"/>
                                         <constraint firstItem="yMJ-f8-k6j" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="7Dl-dK-DUL"/>
                                         <constraint firstItem="bC9-UX-zST" firstAttribute="top" secondItem="pix-av-Cx4" secondAttribute="bottom" constant="4" id="8TI-ag-DRC"/>
                                         <constraint firstItem="MTp-Kr-3Nk" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="8an-Oe-dnD"/>
                                         <constraint firstItem="yMJ-f8-k6j" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="9Hk-3k-B6i"/>
-                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leading" id="Bj3-1v-5JK"/>
-                                        <constraint firstItem="o6L-wR-HZT" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="FmP-AA-MIZ"/>
-                                        <constraint firstItem="yMJ-f8-k6j" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="Gc7-iw-Dpv"/>
-                                        <constraint firstAttribute="trailing" secondItem="gwy-bI-TZd" secondAttribute="trailing" id="HWi-gW-46d"/>
                                         <constraint firstItem="bC9-UX-zST" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="LTi-qz-Rob"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="bC9-UX-zST" secondAttribute="trailing" constant="8" id="MqM-Sx-TBr"/>
-                                        <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="MuO-hE-mVv"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="o6L-wR-HZT" secondAttribute="trailing" constant="8" id="NiR-oY-MMs"/>
                                         <constraint firstItem="o6L-wR-HZT" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leadingMargin" constant="8" id="QIN-fO-f9Q"/>
-                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="R6k-ld-rip"/>
+                                        <constraint firstItem="MTp-Kr-3Nk" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leading" constant="150" id="SHj-Wv-xQ9"/>
                                         <constraint firstItem="o6L-wR-HZT" firstAttribute="top" secondItem="bC9-UX-zST" secondAttribute="bottom" constant="5" id="XqE-vN-y6v"/>
+                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="leading" secondItem="LbL-sJ-0qo" secondAttribute="leading" id="aSr-UN-ktp"/>
+                                        <constraint firstItem="MTp-Kr-3Nk" firstAttribute="top" secondItem="gwy-bI-TZd" secondAttribute="bottom" constant="20" id="amu-bn-yyT"/>
                                         <constraint firstItem="pix-av-Cx4" firstAttribute="top" secondItem="LbL-sJ-0qo" secondAttribute="topMargin" constant="50" id="avH-pI-7Hr"/>
-                                        <constraint firstItem="bC9-UX-zST" firstAttribute="centerX" secondItem="gwy-bI-TZd" secondAttribute="centerX" id="axb-2Y-fEs"/>
                                         <constraint firstItem="yMJ-f8-k6j" firstAttribute="top" secondItem="o6L-wR-HZT" secondAttribute="bottom" constant="8" id="lV4-7W-zFw"/>
-                                        <constraint firstItem="MTp-Kr-3Nk" firstAttribute="top" secondItem="gwy-bI-TZd" secondAttribute="bottom" constant="8" id="oAd-5p-2pk"/>
+                                        <constraint firstAttribute="bottom" secondItem="MTp-Kr-3Nk" secondAttribute="bottom" constant="25" id="loi-jQ-4Rt"/>
                                         <constraint firstItem="pix-av-Cx4" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="pKK-h9-2qg"/>
                                         <constraint firstItem="o6L-wR-HZT" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="t42-On-AQW"/>
                                         <constraint firstItem="bC9-UX-zST" firstAttribute="centerX" secondItem="LbL-sJ-0qo" secondAttribute="centerX" id="tkQ-Mk-rKL"/>
-                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="top" secondItem="LbL-sJ-0qo" secondAttribute="top" id="ymx-3y-tre"/>
+                                        <constraint firstItem="gwy-bI-TZd" firstAttribute="centerX" secondItem="pix-av-Cx4" secondAttribute="centerX" id="wow-7O-BXO"/>
                                     </constraints>
                                     <connections>
                                         <outlet property="bio" destination="yMJ-f8-k6j" id="9O4-e8-Eal"/>
@@ -1526,7 +1523,7 @@
                                 </collectionReusableView>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.30773537719999999" green="0.56490651680000004" blue="0.94709358809999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="mTM-H1-Dc7" firstAttribute="top" secondItem="mg8-3Y-ewV" secondAttribute="top" id="2yo-4T-9sN"/>
                             <constraint firstItem="mTM-H1-Dc7" firstAttribute="bottom" secondItem="V1W-q6-egF" secondAttribute="bottom" id="43t-UO-f3g"/>
@@ -1655,7 +1652,7 @@
     <resources>
         <image name="account" width="24" height="24"/>
         <image name="back" width="24" height="24"/>
-        <image name="blueGradient" width="300" height="168"/>
+        <image name="blueGradient" width="424" height="161"/>
         <image name="chat" width="24" height="24"/>
         <image name="explore" width="24" height="24"/>
         <image name="home" width="24" height="24"/>
