--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -388,9 +388,9 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axT-9o-AKG">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axT-9o-AKG">
                                         <rect key="frame" x="17" y="98" width="309" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dl4-u8-Qm4">
@@ -1214,8 +1214,8 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About the event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCJ-cW-KfN">
-                                        <rect key="frame" x="11" y="309" width="123" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About the event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCJ-cW-KfN">
+                                        <rect key="frame" x="13" y="314" width="123" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="123" id="RZ0-Q7-LaL"/>
                                         </constraints>
@@ -1229,24 +1229,24 @@
                                             <constraint firstAttribute="height" constant="147" id="jTK-2D-aDd"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lij-Va-ASF">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lij-Va-ASF">
                                         <rect key="frame" x="24" y="338" width="323" height="141"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="141" id="62c-q8-3BM"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u30-UW-7O8">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u30-UW-7O8">
                                         <rect key="frame" x="13" y="155" width="66" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="eBf-bt-CEc">
-                                        <rect key="frame" x="13" y="194" width="345" height="88"/>
+                                        <rect key="frame" x="13" y="184" width="345" height="98"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="88" id="TJA-Ii-p6w"/>
+                                            <constraint firstAttribute="height" constant="98" id="TJA-Ii-p6w"/>
                                         </constraints>
                                     </mapView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhC-ud-M9h">
@@ -1262,15 +1262,15 @@
                                             <action selector="directionsToPlace:" destination="1QR-4k-ky8" eventType="touchUpInside" id="vLs-hx-oY1"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCD-Yv-7CV">
-                                        <rect key="frame" x="205" y="309" width="153" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AT&amp;T Center, LA" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prY-iL-lEu">
                                         <rect key="frame" x="15" y="285" width="205" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCD-Yv-7CV">
+                                        <rect key="frame" x="205" y="313" width="153" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -1281,18 +1281,18 @@
                                     <constraint firstItem="lma-Xc-sey" firstAttribute="leading" secondItem="Bvw-rm-EE2" secondAttribute="leading" id="2Ab-de-Cjg"/>
                                     <constraint firstAttribute="trailing" secondItem="PCD-Yv-7CV" secondAttribute="trailing" constant="17" id="2fb-pi-tlq"/>
                                     <constraint firstItem="u30-UW-7O8" firstAttribute="leading" secondItem="eBf-bt-CEc" secondAttribute="leading" id="3x8-qH-j2T"/>
-                                    <constraint firstItem="lij-Va-ASF" firstAttribute="top" secondItem="PCD-Yv-7CV" secondAttribute="bottom" constant="8" symbolic="YES" id="5zR-lx-b6w"/>
+                                    <constraint firstItem="lij-Va-ASF" firstAttribute="top" secondItem="PCD-Yv-7CV" secondAttribute="bottom" constant="4" id="5zR-lx-b6w"/>
                                     <constraint firstItem="prY-iL-lEu" firstAttribute="baseline" secondItem="dcz-Xe-m1L" secondAttribute="baseline" id="63x-4q-JHt"/>
                                     <constraint firstAttribute="trailing" secondItem="lij-Va-ASF" secondAttribute="trailing" constant="28" id="6SY-Tr-yA0"/>
-                                    <constraint firstItem="rCJ-cW-KfN" firstAttribute="leading" secondItem="Bvw-rm-EE2" secondAttribute="leading" constant="11" id="8HU-Si-Ufk"/>
+                                    <constraint firstItem="rCJ-cW-KfN" firstAttribute="leading" secondItem="Bvw-rm-EE2" secondAttribute="leading" constant="13" id="8HU-Si-Ufk"/>
                                     <constraint firstItem="u30-UW-7O8" firstAttribute="bottom" secondItem="jhC-ud-M9h" secondAttribute="bottom" id="ARs-ET-oKg"/>
                                     <constraint firstItem="dcz-Xe-m1L" firstAttribute="top" secondItem="eBf-bt-CEc" secondAttribute="bottom" constant="6" id="Hqj-tt-kJb"/>
                                     <constraint firstItem="eBf-bt-CEc" firstAttribute="trailing" secondItem="9ZE-u1-XfJ" secondAttribute="trailing" id="JYn-EB-Ayo"/>
                                     <constraint firstItem="lij-Va-ASF" firstAttribute="leading" secondItem="Bvw-rm-EE2" secondAttribute="leading" constant="24" id="KG8-Rs-6eP"/>
-                                    <constraint firstItem="rCJ-cW-KfN" firstAttribute="top" secondItem="PCD-Yv-7CV" secondAttribute="top" id="LOO-Ld-hO3"/>
+                                    <constraint firstItem="rCJ-cW-KfN" firstAttribute="top" secondItem="PCD-Yv-7CV" secondAttribute="top" constant="1" id="LOO-Ld-hO3"/>
                                     <constraint firstAttribute="bottom" secondItem="lij-Va-ASF" secondAttribute="bottom" constant="23" id="Ll2-6u-KYl"/>
                                     <constraint firstItem="lma-Xc-sey" firstAttribute="centerX" secondItem="Bvw-rm-EE2" secondAttribute="centerX" id="M23-0e-Egg"/>
-                                    <constraint firstItem="eBf-bt-CEc" firstAttribute="top" secondItem="u30-UW-7O8" secondAttribute="bottom" constant="18" id="OXg-eF-FKz"/>
+                                    <constraint firstItem="eBf-bt-CEc" firstAttribute="top" secondItem="u30-UW-7O8" secondAttribute="bottom" constant="8" id="OXg-eF-FKz"/>
                                     <constraint firstItem="9ZE-u1-XfJ" firstAttribute="leading" secondItem="prY-iL-lEu" secondAttribute="trailing" constant="90" id="UJt-M9-OtW"/>
                                     <constraint firstItem="lma-Xc-sey" firstAttribute="top" secondItem="Bvw-rm-EE2" secondAttribute="top" id="bvo-Ap-Bo1"/>
                                     <constraint firstItem="prY-iL-lEu" firstAttribute="leading" secondItem="Bvw-rm-EE2" secondAttribute="leading" constant="15" id="cun-rL-r4s"/>
@@ -1301,11 +1301,11 @@
                                     <constraint firstItem="jhC-ud-M9h" firstAttribute="trailing" secondItem="Bvw-rm-EE2" secondAttribute="trailingMargin" id="k8H-VW-JXW"/>
                                     <constraint firstAttribute="trailing" secondItem="lma-Xc-sey" secondAttribute="trailing" id="lei-w9-b6x"/>
                                     <constraint firstAttribute="trailing" secondItem="eBf-bt-CEc" secondAttribute="trailing" constant="17" id="nMA-3J-SHD"/>
-                                    <constraint firstItem="PCD-Yv-7CV" firstAttribute="leading" secondItem="rCJ-cW-KfN" secondAttribute="trailing" constant="71" id="olD-N7-1jE"/>
+                                    <constraint firstItem="PCD-Yv-7CV" firstAttribute="leading" secondItem="rCJ-cW-KfN" secondAttribute="trailing" constant="69" id="olD-N7-1jE"/>
                                     <constraint firstAttribute="trailing" secondItem="dcz-Xe-m1L" secondAttribute="trailing" constant="56" id="rhl-XY-JqF"/>
-                                    <constraint firstItem="lij-Va-ASF" firstAttribute="top" secondItem="rCJ-cW-KfN" secondAttribute="bottom" constant="8" symbolic="YES" id="sMs-Ai-Dor"/>
+                                    <constraint firstItem="lij-Va-ASF" firstAttribute="top" secondItem="rCJ-cW-KfN" secondAttribute="bottom" constant="3" id="sMs-Ai-Dor"/>
                                     <constraint firstItem="dcz-Xe-m1L" firstAttribute="leading" secondItem="prY-iL-lEu" secondAttribute="trailing" constant="8" symbolic="YES" id="vWC-vt-Kuk"/>
-                                    <constraint firstItem="rCJ-cW-KfN" firstAttribute="top" secondItem="prY-iL-lEu" secondAttribute="bottom" constant="3" id="wVL-QS-Nep"/>
+                                    <constraint firstItem="rCJ-cW-KfN" firstAttribute="top" secondItem="prY-iL-lEu" secondAttribute="bottom" constant="8" id="wVL-QS-Nep"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
